build_files/lib/error/test/lib/llist/sources/llist.c
/*
** EPITECH PROJECT, 2025
** llist - llist.c
** File description:
** <description>
*/

#include "../includes/llist.h"

void error_exist(void)
{
}
